Cibyl (19)
	* Refactored the implementation of ELF section handling - much more
	general now

	-- Simon Kagstrom <simon.kagstrom@gmail.com>

Cibyl (18)
	* Peephole optimization is now possible for the C++ translator

	* Micro optimizations of lb/lh/sb/sh in CRunTime.java

	* Error handling in strtoull has been improved

	* Added NOPH_MemoryFile_openIndirectSizeHint to provide more efficient
	allocation

	* Fixed bug in NOPH_MemoryFile_openIndirect - the data was overwritten
	on initial read if the file was larger than the bufsize (4096)

	* Fixed alignment bug for the ctors and dtors sections

	* Refactoring: Added a panic_if statement to replace some assertions
	and regular errors with more descriptive messages

	* Re-implemented sscanf due to a license incompatibility. The previous
	sscanf was taken from dietlibc, which is GPLed. I reimplemented the
	functionality here, to replace it with a LGPLed implementation like
	the rest of the Cibyl libraries (sans some BSD code)

	* Emit warning on missing syscalls in Python

	* Fixed the ELF symbol size fixup also in the Python translator
	(thanks to Ehud Shabtai)

	* Extended ctype.h with isgraph, ispunct, isxdigit, iscntrl and
	stdlib.h with strtoll and strtoull

	* Inputstreams are now marked upon open (if mark is available). This
	fixes a problem occuring in the newer Sun emulators

	* Fixed NOPH_InputStream_markSupported prototype

	* Fixed potential bug in NOPH_try/NOPH_catch - GCC could sometimes
	optimze away usage of addresses computed within the try/catch block
	(and if the exception occurs, these might never happen).

	* The configuration handling of the C++ translator has been improved
	and xcibyl-translator now accepts arbitrary configuration on the
	command line

	* Optimization of the call table is now *off* by default for both the
	Python and the C++ translator

	* The Python translator will now also handle labels pointing to
	instructions in delay slots (patch from Eran Netanel)
